--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       <a href="https://github.com/samtgarson/engagement" target="_blank"><img src="https://github.com/samtgarson/engagement/raw/master/logo.png" alt="engagement" style="max-width:100%;"></a>
     </p>
     <p><strong>engagement</strong> A micro-service for getting Instagram engagement rates</p>
+    <br />
     <p>
       <a href="https://circleci.com/gh/samtgarson/engagement"><img src="https://camo.githubusercontent.com/1cae041ff23f1962d30e199428ebb68ed1890b57/68747470733a2f2f696d672e736869656c64732e696f2f636972636c6563692f70726f6a6563742f6769746875622f73616d74676172736f6e2f656e676167656d656e742e737667" alt="Build status" data-canonical-src="https://img.shields.io/circleci/project/github/samtgarson/engagement.svg" style="max-width:100%;"></a>
       <a href="https://github.com/sindresorhus/xo"><img src="https://camo.githubusercontent.com/b9d624cb37169bb3e06fd6deddabfff02b5e43be/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f636f64655f7374796c652d584f2d3565643963372e737667" alt="XO code style" data-canonical-src="https://img.shields.io/badge/code_style-XO-5ed9c7.svg" style="max-width:100%;"></a>
@@ -35,8 +36,9 @@
     <ul>
       <li><strong><code>GET /:username</code></strong> <em>Returns the engagement rate for requested username.</em></li>
     </ul>
-    <h3>Code</h3>
-    <p><a href="https://github.com/samtgarson/engagement">https://github.com/samtgarson/engagement</a></p>
+    <br />
+    <p><a href="https://github.com/samtgarson/engagement">See the code</a></p>
+    <p>By <a href="http://samgarson.com">Sam Garson</a></p>
   </article>
 </body>
 
